# OneClickCut

./: CMakeLists.txt  README.md
Segmentor/: CMakeLists.txt  Marker.py  Segmentor.py  SegmentorLogic.py  SegmentorUtils.py
